# dewey

./: .code_consol_checkpoint.json  .code_consolpointpoint.json  .coverage  .gitignore  .pre-commit-config.yaml  404.html  ========  CONVENTIONS.md  Project Architecture.excalidraw  Project.excalidraw  README-PROJECT-STRUCTURE.md  README.md  RIA_IMPORT_README.md  TODO.md  add_motherduck_primary_keys.py  add_primary_keys.py  api_response_20250403_092623.json  check_base_script_inheritance.py  check_db.py  check_emails.py  check_tables.py  class_index.json  cleanup_directory.py  cleanup_other_files.py  cleanup_other_tables.py  cleanup_small_csvs.py  cleanup_tables.py  codebase_comparison.py  codebase_comparison_report.txt  codebase_structure.txt  conf.py  copy_templates.py  core-reorganization-summary.md  credentials.json  dewey  dewey.code-workspace  dewey.duckdb.wal  directory_analysis.md  drop_other_tables.py  fix_backtick_files.py  (+29 more)
.chroma_cache/: chroma.sqlite3
.cursor/rules/: conventions.mdc  uv.mdc
.github/workflows/: ci.yml
blog/: index.html
config/: code_consolidator.yaml  config.py  config_handler.py  dewey.yaml  logging.py  prd_config.yaml  script_checkpoints.yaml  script_mover.yaml
config/credentials/: credentials.json
config/email/: email_preferences.json
consolidated_functions/: consolidated_080e073b.py  consolidated_0a829e88.py  consolidated_130fb336.py  consolidated_191ad707.py  consolidated_1d5f2755.py  consolidated_1e789acf.py  consolidated_229f6a18.py  consolidated_28af0473.py  consolidated_36593d93.py  consolidated_388fca8e.py  consolidated_3a890647.py  consolidated_3f301881.py  consolidated_41341b50.py  consolidated_4271f6aa.py  consolidated_492441ba.py  consolidated_49a1be4d.py  consolidated_4ce425ed.py  consolidated_4ed2daaa.py  consolidated_504643c4.py  consolidated_515143dd.py  consolidated_52c6d853.py  consolidated_612b15bf.py  consolidated_64581f39.py  consolidated_6cd72cab.py  consolidated_6e2fee03.py  consolidated_75677a49.py  consolidated_75f86681.py  consolidated_7f0048fd.py  consolidated_825b28f4.py  consolidated_853eed6d.py  consolidated_91c081b5.py  consolidated_953b95e4.py  consolidated_98eb3bd0.py  consolidated_a8c3a3a5.py  consolidated_ab796c52.py  consolidated_b05b79b4.py  consolidated_b1b96bf9.py  consolidated_b38ffcae.py  consolidated_b61a2a4c.py  consolidated_b6bdaf00.py  (+17 more)
contact/: index.html
docs/: .buildinfo  ARCHITECTURE.md  LLM_INTEGRATION.md  base_script.md  dewey.core.automation.docs.html  dewey.core.automation.html  dewey.core.automation.tests.html  dewey.core.bookkeeping.docs.html  dewey.core.bookkeeping.html  dewey.core.config.html  dewey.core.crm.communication.html  dewey.core.crm.contacts.html  dewey.core.crm.data.html  dewey.core.crm.data_ingestion.html  dewey.core.crm.docs.html  dewey.core.crm.email.html  dewey.core.crm.email_classifier.html  dewey.core.crm.email_classifier.prompts.html  dewey.core.crm.enrichment.html  dewey.core.crm.events.html  dewey.core.crm.gmail.html  dewey.core.crm.html  dewey.core.crm.labeler.html  dewey.core.crm.priority.html  dewey.core.crm.tests.html  dewey.core.crm.transcripts.html  dewey.core.crm.utils.html  dewey.core.db.html  dewey.core.engines.html  dewey.core.html  dewey.core.maintenance.html  dewey.core.migrations.html  dewey.core.migrations.migration_files.html  dewey.core.research.analysis.html  dewey.core.research.companies.html  dewey.core.research.deployment.html  dewey.core.research.docs.html  dewey.core.research.engines.html  dewey.core.research.html  dewey.core.research.management.html  (+37 more)
docs/_modules/: dewey.html  (+1 more)
media/: index.html
migrations/: alembic.ini  env.py
newsletters/: index.html
research/: index.html
scripts/: README.md  README_DB_SYNC.md  RF_docstring_agent.py  aider_refactor.py  aider_refactor_and_test.py  analyze_architecture.py  apply_standards.sh  batch_refactor_and_test.sh  bidirectional_sync.py  capture_precommit_issues.py  check_abstract_methods.py  check_data.py  check_tables.py  cleanup_database.py  cleanup_logs.sh  cleanup_tables.py  code_quality.py  code_uniqueness_analyzer.py  consolidate_logs.sh  consolidate_schemas.py  db___init__.py  db_analyze_local_dbs.py  db_analyze_tables.py  db_force_cleanup.py  db_upload_db.py  db_verify_db.py  dewey-unified-processor.service  direct_db_sync.py  direct_sync.py  document_directory.py  drop_small_tables.py  extract_non_compliant.py  find_non_compliant.py  fix_backtick_files.py  fix_backticks.py  fix_common_issues.py  fix_docstrings.py  gemini_analyze.sh  generate_basescript_list.py  generate_legacy_todos.py  (+34 more)
search/: search_index.json
source/: conf.py  dewey.core.automation.tests.rst  dewey.core.bookkeeping.docs.rst  dewey.core.bookkeeping.rst  dewey.core.config.rst  dewey.core.crm.communication.rst  dewey.core.crm.contacts.rst  dewey.core.crm.data_ingestion.rst  dewey.core.crm.email_classifier.rst  dewey.core.crm.enrichment.rst  dewey.core.crm.events.rst  dewey.core.crm.labeler.rst  dewey.core.crm.priority.rst  dewey.core.crm.rst  dewey.core.crm.tests.rst  dewey.core.db.rst  dewey.core.engines.rst  dewey.core.maintenance.rst  dewey.core.migrations.rst  dewey.core.research.deployment.rst  dewey.core.research.docs.rst  dewey.core.research.management.rst  dewey.core.research.port.rst  dewey.core.research.rst  dewey.core.research.utils.rst  dewey.core.research.workflows.rst  dewey.core.tui.rst  dewey.llm.api_clients.rst  dewey.llm.docs.rst  dewey.llm.prompts.rst  dewey.llm.rst  dewey.llm.tests.integration.api_clients.rst  dewey.llm.tests.integration.rst  dewey.llm.tests.integration.tools.rst  dewey.llm.tests.unit.api_clients.rst  dewey.llm.tests.unit.config.rst  dewey.llm.tests.unit.tools.rst  dewey.llm.tools.rst  dewey.utils.rst
src/: document_directory.py  launch_feedback_manager.py  script_mover.py
strategies/: index.html
tests/: .gitignore  README.md  __init__.py  conftest.py  helpers.py  test_duplicate_checker.py  test_service_deployment.py  test_utils.py
ui/: __init__.py  app.py  base_widget.py  email_feedback_tui.py  lunar_widget.py  screens.py  service_manager.py  workers.py
~/: .zshrc
(+2437 files in other folders)
