[project]
name = "dewey"
version = "0.1.0"
authors = [
  { name="srvo", email="sloane@ethicic.com" },
]
description = "A personal finance and research assistant"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "ibis-framework[duckdb]",
    "duckdb-engine",
    "python-dotenv>=1.0.0",
    "ruff",
    "pytest",
    "requests",
    "pyyaml>=6.0.0",
    "openai>=1.0.0",
    "google-generativeai",
    "pydantic",
    "structlog",
    "sqlalchemy",
    "uvicorn",
    "setuptools",
    "joblib",
    "pandas",
    "click",
    "pytest-mock",
    "pytest-cov",
    "boto3",
    "duckduckgo-search",
    "ratelimit",
    "botocore",
    "psycopg2-binary",
    "coverage",
    "ulid-py",
    "asgiref",
    "asyncpg",
    "tomli-w", # For proper TOML handling # Required for OpenRouter client
    "httpx",
    "tqdm",
    "flake8",
    "google-generativeai",
    "openai",
    "humanize",
    "spacy>=3.8.4",
    "black>=25.1.0",
    "numpy==1.26.0",  # Pinned for spaCy compatibility
    "chromadb>=0.4.15",
    "sentence-transformers>=2.2.2",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pyyaml>=6.0.0",
    "python-dotenv",
    "pre-commit",
    "ruff", 
    "textual>=2.1.2",
    "aider-chat @ git+https://github.com/paul-gauthier/aider.git",  # Correct package name
]

[tool.setuptools]
package-dir = {"" = "src"}

[project.scripts]
dewey = "dewey.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dewey"]
